Smooth data, fixing initialization

--- a/tutorial/source/epidemiology_ii.ipynb
+++ b/tutorial/source/epidemiology_ii.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import logging\n",
     "import urllib.request\n",
     "from collections import OrderedDict\n",
     "\n",
@@ -23,12 +24,17 @@
     "import pyro\n",
     "import pyro.distributions as dist\n",
     "from pyro.contrib.epidemiology import CompartmentalModel, binomial_dist, infection_dist\n",
+    "from pyro.ops.tensor_utils import convolve\n",
     "\n",
+    "%matplotlib inline\n",
     "torch.set_default_dtype(torch.double)  # Needed for numerical stability.\n",
     "pyro.enable_validation(True)           # Always a good idea.\n",
     "print(torch.__version__)\n",
     "print(pyro.__version__)\n",
-    "%matplotlib inline"
+    "\n",
+    "# This is useful for debugging.\n",
+    "# logging.getLogger(\"pyro\").setLevel(logging.DEBUG)\n",
+    "# logging.getLogger(\"pyro\").handlers[0].setLevel(logging.DEBUG)"
    ]
   },
   {
@@ -55,9 +61,9 @@
     "        urllib.request.urlretrieve(url + basename, local_path)\n",
     "    return pd.read_csv(local_path)\n",
     "\n",
-    "confirmed_df = download_df(\"time_series_covid19_confirmed_US.csv\")\n",
-    "deaths_df = download_df(\"time_series_covid19_deaths_US.csv\")\n",
-    "confirmed_df.columns[:13]"
+    "cum_cases_df = download_df(\"time_series_covid19_confirmed_US.csv\")\n",
+    "cum_deaths_df = download_df(\"time_series_covid19_deaths_US.csv\")\n",
+    "cum_cases_df.columns[:13]"
    ]
   },
   {
@@ -100,24 +106,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed = []\n",
-    "deaths = []\n",
+    "cum_cases = []\n",
+    "cum_deaths = []\n",
     "for county in counties:\n",
-    "    i = list(confirmed_df[\"Admin2\"]).index(county)\n",
-    "    confirmed.append(confirmed_df.iloc[i, 11:])\n",
-    "    i = list(deaths_df[\"Admin2\"]).index(county)\n",
-    "    deaths.append(deaths_df.iloc[i, 12:])\n",
-    "confirmed = torch.tensor(confirmed, dtype=torch.float64).T.contiguous()\n",
-    "deaths = torch.tensor(deaths, dtype=torch.float64).T.contiguous()\n",
-    "assert confirmed.shape == deaths.shape\n",
-    "print(confirmed.shape, deaths.shape)"
+    "    i = list(cum_cases_df[\"Admin2\"]).index(county)\n",
+    "    cum_cases.append(cum_cases_df.iloc[i, 11:])\n",
+    "    i = list(cum_deaths_df[\"Admin2\"]).index(county)\n",
+    "    cum_deaths.append(cum_deaths_df.iloc[i, 12:])\n",
+    "cum_cases = torch.tensor(cum_cases, dtype=torch.float64).T.contiguous()\n",
+    "cum_deaths = torch.tensor(cum_deaths, dtype=torch.float64).T.contiguous()\n",
+    "assert cum_cases.shape == cum_deaths.shape\n",
+    "print(cum_cases.shape, cum_deaths.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to convert from cumulative to difference data."
+    "We need to convert from cumulative to difference data. However the original data is inconsistent due to later corrections of earlier errors, and is noisy due to reporting jitter. To clean up both of these artifacts, we will smooth both cumulative data sources with a square window, effectively attributing a report recoreded at date ``t`` to a true report at date ``t-n`` where ``n`` is uniformly distributed in an interval ``[0, window)``."
    ]
   },
   {
@@ -126,8 +132,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed = confirmed[1:] - confirmed[:-1]\n",
-    "deaths = deaths[1:] - deaths[:-1]"
+    "T = len(cum_cases)\n",
+    "for window in range(1, 100):\n",
+    "    kernel = torch.ones(window) / window\n",
+    "    smooth_cases = convolve(cum_cases.T, kernel).T[:T].round()\n",
+    "    smooth_deaths = convolve(cum_deaths.T, kernel).T[:T].round()\n",
+    "    new_cases = smooth_cases[1:] - smooth_cases[:-1]\n",
+    "    new_deaths = smooth_deaths[1:] - smooth_deaths[:-1]\n",
+    "    if (new_cases >= 0).all() and (new_deaths >= 0).all():\n",
+    "        break\n",
+    "print(\"window = {}\".format(window))"
    ]
   },
   {
@@ -137,47 +151,13 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(2, 1, figsize=(8,6), sharex=True)\n",
-    "axes[0].plot(confirmed)\n",
-    "axes[1].plot(deaths)\n",
+    "axes[0].plot(new_cases)\n",
+    "axes[1].plot(new_deaths)\n",
     "axes[0].set_ylabel(\"new cases\")\n",
     "axes[1].set_ylabel(\"new deaths\")\n",
     "axes[1].set_xlabel(\"Day after 1/23/2020\")\n",
-    "axes[0].set_xlim(0, len(confirmed) - 1)\n",
-    "axes[0].set_title(\"COVID-19 cases in the San Francisco Bay Area\")\n",
-    "plt.subplots_adjust(hspace=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll clamp to zero to avoid numerical issues due to data corrections. This leads to overestimates of the cumulative counts. A more complex alternative could distribute the negative corrections backwards in time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confirmed.clamp_(min=0)\n",
-    "deaths.clamp_(min=0);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(2, 1, figsize=(8,6), sharex=True)\n",
-    "axes[0].plot(confirmed)\n",
-    "axes[1].plot(deaths)\n",
-    "axes[0].set_ylabel(\"new cases\")\n",
-    "axes[1].set_ylabel(\"new deaths\")\n",
-    "axes[1].set_xlabel(\"Day after 1/23/2020\")\n",
-    "axes[0].set_xlim(0, len(confirmed) - 1)\n",
-    "axes[0].set_title(\"COVID-19 cases in the San Francisco Bay Area\")\n",
+    "axes[0].set_xlim(0, len(cum_cases) - 1)\n",
+    "axes[0].set_title(\"COVID-19 cases in nine Bay Area Counties\")\n",
     "plt.subplots_adjust(hspace=0)"
    ]
   },
@@ -197,12 +177,12 @@
    "outputs": [],
    "source": [
     "class Model(CompartmentalModel):\n",
-    "    def __init__(self, population, coupling, new_cases, deaths,\n",
+    "    def __init__(self, population, coupling, new_cases, new_deaths,\n",
     "                 incubation_time=4.0,\n",
     "                 recovery_time=14.0,\n",
-    "                 external_rate=0.1):\n",
-    "        duration, num_regions = deaths.shape\n",
-    "        assert new_cases.shape == deaths.shape\n",
+    "                 external_rate=0.01):\n",
+    "        duration, num_regions = new_deaths.shape\n",
+    "        assert new_cases.shape == new_deaths.shape\n",
     "        assert len(population) == num_regions\n",
     "        assert coupling.shape == (num_regions, num_regions)\n",
     "        assert (0 <= coupling).all()\n",
@@ -216,15 +196,15 @@
     "        self.external_rate = external_rate\n",
     "        self.coupling = coupling\n",
     "        self.new_cases = new_cases\n",
-    "        self.deaths = deaths\n",
+    "        self.new_deaths = new_deaths\n",
     "\n",
-    "    series = (\"S2E\", \"E2I\", \"I2R\", \"beta\", \"Re\", \"new_cases\", \"deaths\")\n",
+    "    series = (\"S2E\", \"E2I\", \"I2R\", \"beta\", \"Re\", \"new_cases\", \"new_deaths\")\n",
     "    full_mass = [(\"R0\", \"rho\", \"mu\", \"od\")]\n",
     "\n",
     "    def global_model(self):\n",
     "        tau_e = self.incubation_time\n",
     "        tau_i = self.recovery_time\n",
-    "        R0 = pyro.sample(\"R0\", dist.LogNormal(0., 1.))  # Weak prior.\n",
+    "        R0 = pyro.sample(\"R0\", dist.LogNormal(1., 0.5))  # Weak prior.\n",
     "        rho = pyro.sample(\"rho\", dist.Beta(10, 10))  # About 50% response rate.\n",
     "        mu = pyro.sample(\"mu\", dist.Beta(100, 2))  # About 2% mortality rate.\n",
     "        od = pyro.sample(\"od\", dist.Beta(2, 6))\n",
@@ -243,7 +223,7 @@
     "        # Assume effective reproductive number Re varies in time,\n",
     "        # but is the same across all regions (say due to synchronized policy).\n",
     "        beta = pyro.sample(\"beta_{}\".format(t),\n",
-    "                           dist.LogNormal(state[\"beta\"].log(), 0.1))\n",
+    "                           dist.LogNormal(state[\"beta\"].log(), 0.01))\n",
     "        Re = pyro.deterministic(\"Re_{}\".format(t), R0 * beta)\n",
     "\n",
     "        # Account for strong intra-region infections, weak inter-region infections, and\n",
@@ -280,9 +260,9 @@
     "            pyro.sample(\"new_cases_{}\".format(t),\n",
     "                        binomial_dist(S2E, rho, overdispersion=od),\n",
     "                        obs=self.new_cases[t] if t_is_observed else None)\n",
-    "            pyro.sample(\"deaths_{}\".format(t),\n",
-    "                        binomial_dist(S2E, mu, overdispersion=od),\n",
-    "                        obs=self.deaths[t] if t_is_observed else None)"
+    "            pyro.sample(\"new_deaths_{}\".format(t),\n",
+    "                        binomial_dist(I2R, mu, overdispersion=od),\n",
+    "                        obs=self.new_deaths[t] if t_is_observed else None)"
    ]
   },
   {
@@ -299,7 +279,7 @@
    "outputs": [],
    "source": [
     "coupling = torch.eye(len(population)).clamp_(min=0.1)\n",
-    "model = Model(population, coupling, confirmed, deaths)"
+    "model = Model(population, coupling, new_cases, new_deaths)"
    ]
   },
   {
@@ -317,10 +297,8 @@
    },
    "outputs": [],
    "source": [
-    "model.fit(num_samples=200, haar_full_mass=7,\n",
-    "          heuristic_retries=1,\n",
-    "          heuristic_num_particles=1024,\n",
-    "          heuristic_ess_threshold=0.1)"
+    "pyro.set_rng_seed(20200607)\n",
+    "model.fit(num_samples=200, haar_full_mass=7)"
    ]
   },
   {
@@ -329,7 +307,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed[:47+1].sum(-1)"
+    "print(cum_cases[:106+1].sum(-1).long())\n",
+    "print(cum_deaths[:106+1].sum(-1).long())"
    ]
   },
   {
