--- a/tutorial/source/epidemiology_ii.ipynb
+++ b/tutorial/source/epidemiology_ii.ipynb
@@ -141,7 +141,8 @@
     "    new_deaths = smooth_deaths[1:] - smooth_deaths[:-1]\n",
     "    if (new_cases >= 0).all() and (new_deaths >= 0).all():\n",
     "        break\n",
-    "print(\"window = {}\".format(window))"
+    "print(\"window = {}\".format(window))\n",
+    "print(\"shape = {}\".format(tuple(new_cases.shape)))"
    ]
   },
   {
@@ -223,7 +224,7 @@
     "        # Assume effective reproductive number Re varies in time,\n",
     "        # but is the same across all regions (say due to synchronized policy).\n",
     "        beta = pyro.sample(\"beta_{}\".format(t),\n",
-    "                           dist.LogNormal(state[\"beta\"].log(), 0.01))\n",
+    "                           dist.LogNormal(state[\"beta\"].log(), 0.1))\n",
     "        Re = pyro.deterministic(\"Re_{}\".format(t), R0 * beta)\n",
     "\n",
     "        # Account for strong intra-region infections, weak inter-region infections, and\n",
@@ -298,7 +299,7 @@
    "outputs": [],
    "source": [
     "pyro.set_rng_seed(20200607)\n",
-    "model.fit(num_samples=200, haar_full_mass=7)"
+    "mcmc = model.fit(warmup_steps=300, num_samples=200, num_quant_bins=2, haar_full_mass=15)"
    ]
   },
   {
@@ -307,8 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(cum_cases[:106+1].sum(-1).long())\n",
-    "print(cum_deaths[:106+1].sum(-1).long())"
+    "mcmc.summary()"
    ]
   },
   {
