--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Epidemiology II: Regional Models"
+    "# Epidemiology: Regional Models"
    ]
   },
   {
