Make notebook compatible with float32

--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -90,7 +90,7 @@
     "    (\"Marin\", 251000),\n",
     "    (\"Napa\", 135000),\n",
     "])\n",
-    "population = torch.tensor(list(counties.values()), dtype=torch.double)"
+    "population = torch.tensor(list(map(float, counties.values())))"
    ]
   },
   {
@@ -113,8 +113,8 @@
     "    cum_cases.append(cum_cases_df.iloc[i, 11:])\n",
     "    i = list(cum_deaths_df[\"Admin2\"]).index(county)\n",
     "    cum_deaths.append(cum_deaths_df.iloc[i, 12:])\n",
-    "cum_cases = torch.tensor(cum_cases, dtype=torch.float64).T.contiguous()\n",
-    "cum_deaths = torch.tensor(cum_deaths, dtype=torch.float64).T.contiguous()\n",
+    "cum_cases = torch.tensor(cum_cases, dtype=torch.get_default_dtype()).T.contiguous()\n",
+    "cum_deaths = torch.tensor(cum_deaths, dtype=torch.get_default_dtype()).T.contiguous()\n",
     "assert cum_cases.shape == cum_deaths.shape\n",
     "print(cum_cases.shape, cum_deaths.shape)"
    ]
@@ -306,6 +306,15 @@
    "outputs": [],
    "source": [
     "mcmc.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%debug"
    ]
   },
   {
