--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -27,8 +27,11 @@
     "from pyro.ops.tensor_utils import convolve\n",
     "\n",
     "%matplotlib inline\n",
-    "torch.set_default_dtype(torch.double)  # Needed for numerical stability.\n",
     "pyro.enable_validation(True)           # Always a good idea.\n",
+    "torch.set_default_dtype(torch.double)  # Needed for numerical stability.\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"using cuda\")\n",
+    "    torch.set_default_tensor_type(torch.cuda.DoubleTensor)\n",
     "print(torch.__version__)\n",
     "print(pyro.__version__)\n",
     "\n",
@@ -90,7 +93,7 @@
     "    (\"Marin\", 251000),\n",
     "    (\"Napa\", 135000),\n",
     "])\n",
-    "population = torch.tensor(list(counties.values()), dtype=torch.double)"
+    "population = torch.tensor(list(map(float, counties.values())))"
    ]
   },
   {
@@ -113,8 +116,8 @@
     "    cum_cases.append(cum_cases_df.iloc[i, 11:])\n",
     "    i = list(cum_deaths_df[\"Admin2\"]).index(county)\n",
     "    cum_deaths.append(cum_deaths_df.iloc[i, 12:])\n",
-    "cum_cases = torch.tensor(cum_cases, dtype=torch.float64).T.contiguous()\n",
-    "cum_deaths = torch.tensor(cum_deaths, dtype=torch.float64).T.contiguous()\n",
+    "cum_cases = torch.tensor(cum_cases, dtype=torch.get_default_dtype()).T.contiguous()\n",
+    "cum_deaths = torch.tensor(cum_deaths, dtype=torch.get_default_dtype()).T.contiguous()\n",
     "assert cum_cases.shape == cum_deaths.shape\n",
     "print(cum_cases.shape, cum_deaths.shape)"
    ]
@@ -152,8 +155,8 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(2, 1, figsize=(8,6), sharex=True)\n",
-    "axes[0].plot(new_cases)\n",
-    "axes[1].plot(new_deaths)\n",
+    "axes[0].plot(new_cases.cpu())\n",
+    "axes[1].plot(new_deaths.cpu())\n",
     "axes[0].set_ylabel(\"new cases\")\n",
     "axes[1].set_ylabel(\"new deaths\")\n",
     "axes[1].set_xlabel(\"Day after 1/23/2020\")\n",
@@ -295,8 +298,9 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "pyro.set_rng_seed(20200607)\n",
-    "mcmc = model.fit(warmup_steps=300, num_samples=200, num_quant_bins=2, haar_full_mass=15)"
+    "mcmc = model.fit(warmup_steps=300, num_samples=200, num_quant_bins=4, haar_full_mass=15)"
    ]
   },
   {
@@ -318,9 +322,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (conda_pytorch_latest_p36)",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_latest_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
