Add plots; fix bug in mu

--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import torch\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
@@ -207,9 +208,10 @@
     "        tau_i = self.recovery_time\n",
     "        R0 = pyro.sample(\"R0\", dist.LogNormal(1., 0.5))  # Weak prior.\n",
     "        rho = pyro.sample(\"rho\", dist.Beta(10, 10))  # About 50% response rate.\n",
-    "        mu = pyro.sample(\"mu\", dist.Beta(100, 2))  # About 2% mortality rate.\n",
+    "        mu = pyro.sample(\"mu\", dist.Beta(2, 100))  # About 2% mortality rate.\n",
+    "        drift = pyro.sample(\"drift\", dist.LogNormal(-3, 1.))\n",
     "        od = pyro.sample(\"od\", dist.Beta(2, 6))\n",
-    "        return R0, tau_e, tau_i, rho, mu, od\n",
+    "        return R0, tau_e, tau_i, rho, mu, drift, od\n",
     "\n",
     "    def initialize(self, params):\n",
     "        # Start with no local infections and base reproductive number.\n",
@@ -219,19 +221,19 @@
     "                \"beta\": torch.tensor(1.)}\n",
     "\n",
     "    def transition(self, params, state, t):\n",
-    "        R0, tau_e, tau_i, rho, mu, od = params\n",
+    "        R0, tau_e, tau_i, rho, mu, drift, od = params\n",
     "\n",
-    "        # Assume effective reproductive number Re varies in time,\n",
+    "        # Assume effective reproductive number Rt varies in time,\n",
     "        # but is the same across all regions (say due to synchronized policy).\n",
     "        beta = pyro.sample(\"beta_{}\".format(t),\n",
-    "                           dist.LogNormal(state[\"beta\"].log(), 0.1))\n",
-    "        Re = pyro.deterministic(\"Re_{}\".format(t), R0 * beta)\n",
+    "                           dist.LogNormal(state[\"beta\"].log(), drift))\n",
+    "        Rt = pyro.deterministic(\"Rt_{}\".format(t), R0 * beta)\n",
     "\n",
     "        # Account for strong intra-region infections, weak inter-region infections, and\n",
     "        # even weaker background infections from external sources. This uses approximate\n",
     "        # (point estimate) counts I_approx for infection from other regions, but uses\n",
     "        # the exact (enumerated) count I for infections from one's own region.\n",
-    "        I_external = self.external_rate * tau_i / Re\n",
+    "        I_external = self.external_rate * tau_i / Rt\n",
     "        I_coupled = state[\"I_approx\"] @ self.coupling + I_external\n",
     "        I_coupled = I_coupled + (state[\"I\"] - state[\"I_approx\"]) * self.coupling.diag()\n",
     "        I_coupled = I_coupled.clamp(min=0)  # In case I_approx is negative.\n",
@@ -240,7 +242,7 @@
     "        with self.region_plate:\n",
     "            # Sample flows between compartments.\n",
     "            S2E = pyro.sample(\"S2E_{}\".format(t),\n",
-    "                              infection_dist(individual_rate=Re / tau_i,\n",
+    "                              infection_dist(individual_rate=Rt / tau_i,\n",
     "                                             num_susceptible=state[\"S\"],\n",
     "                                             num_infectious=I_coupled,\n",
     "                                             population=self.population,\n",
@@ -294,13 +296,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "%%time\n",
     "pyro.set_rng_seed(20200607)\n",
-    "mcmc = model.fit(warmup_steps=300, num_samples=200, num_quant_bins=4, haar_full_mass=15)"
+    "mcmc = model.fit(num_samples=200, num_quant_bins=2, haar_full_mass=15)"
    ]
   },
   {
@@ -318,7 +320,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%debug"
+    "def plot_globals(samples):\n",
+    "    names = sorted(k for k, v in model.samples.items() if v.shape[1:].numel() == 1)\n",
+    "    fig, axes = plt.subplots(len(names), 1, figsize=(5, 2.5 * len(names)))\n",
+    "    for ax, name in zip(axes, names):\n",
+    "        mean = samples[name].mean().item()\n",
+    "        std = samples[name].std().item()\n",
+    "        ax.set_title(\"{} = {:0.3g} \\u00B1 {:0.3g}\".format(name, mean, std))\n",
+    "        sns.distplot(samples[name].reshape(-1), ax=ax)\n",
+    "        ax.set_yticks(())\n",
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_globals(model.samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "samples = model.predict(forecast=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_series(samples, name, title):\n",
+    "    num_samples = len(samples[name])\n",
+    "    time = torch.arange(samples[name].size(1))\n",
+    "    value = samples[name]\n",
+    "    median = value.median(dim=0).values\n",
+    "    p05 = value.kthvalue(int(round(0.5 + 0.05 * num_samples)), dim=0).values\n",
+    "    p95 = value.kthvalue(int(round(0.5 + 0.95 * num_samples)), dim=0).values\n",
+    "\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    plt.title(title)\n",
+    "    plt.fill_between(time, p05[:, 0], p95[:, 0], color=\"red\", alpha=0.3, label=\"90% CI\")\n",
+    "    plt.plot(time, median[:, 0], \"r-\", label=\"median\")\n",
+    "    plt.axvline(model.duration - 0.5, color=\"gray\", lw=1)\n",
+    "    plt.axhline(1, color=\"gray\", lw=1, linestyle=\"--\")\n",
+    "    plt.xlim(0, len(time) - 1)\n",
+    "    plt.ylim(0, 1.1 * p95[:model.duration].max().item())\n",
+    "    plt.xlabel(\"Day after 1/23/2020\")\n",
+    "    plt.ylabel(name)\n",
+    "    plt.legend(loc=\"best\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.subplots_adjust(hspace=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_series(samples, \"Rt\", \"Reproductive number over time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_regional_series(samples, name, title):\n",
+    "    num_samples = len(samples[name])\n",
+    "    num_regions = len(model.population)\n",
+    "    time = torch.arange(samples[name].size(1))\n",
+    "    value = samples[name]\n",
+    "    median = value.median(dim=0).values\n",
+    "    p05 = value.kthvalue(int(round(0.5 + 0.05 * num_samples)), dim=0).values\n",
+    "    p95 = value.kthvalue(int(round(0.5 + 0.95 * num_samples)), dim=0).values\n",
+    "\n",
+    "    fig, axes = plt.subplots(num_regions, sharex=True,\n",
+    "                             figsize=(8, 1 + 2 * num_regions ** 0.8))\n",
+    "    axes[0].set_title(title)\n",
+    "    for r, ax in enumerate(axes):\n",
+    "        ax.fill_between(time, p05[:, r], p95[:, r], color=\"red\", alpha=0.3, label=\"90% CI\")\n",
+    "        ax.plot(time, median[:, r], \"r-\", label=\"median\")\n",
+    "        ax.axvline(model.duration - 0.5, color=\"gray\", lw=1)\n",
+    "        ax.set_xlim(0, len(time) - 1)\n",
+    "        ax.set_ylim(1, None)\n",
+    "        ax.set_ylabel(list(counties)[r])\n",
+    "        ax.set_yscale(\"log\")\n",
+    "    axes[0].legend(loc=\"best\")\n",
+    "    axes[-1].set_xlabel(\"Day after 1/23/2020\")\n",
+    "    axes[-1].legend(loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.subplots_adjust(hspace=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regional_series(samples, \"S2E\", \"New infections among 9 counties\")"
    ]
   },
   {
@@ -331,9 +441,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_pytorch_latest_p36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -345,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
