--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -302,7 +302,7 @@
    "source": [
     "%%time\n",
     "pyro.set_rng_seed(20200607)\n",
-    "mcmc = model.fit(num_samples=200, num_quant_bins=2, haar_full_mass=15)"
+    "mcmc = model.fit(num_samples=1000, haar_full_mass=15)"
    ]
   },
   {
@@ -415,9 +415,8 @@
     "        ax.set_ylim(1, None)\n",
     "        ax.set_ylabel(list(counties)[r])\n",
     "        ax.set_yscale(\"log\")\n",
-    "    axes[0].legend(loc=\"best\")\n",
+    "    axes[0].legend(loc=\"upper left\")\n",
     "    axes[-1].set_xlabel(\"Day after 1/23/2020\")\n",
-    "    axes[-1].legend(loc=\"upper left\")\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(hspace=0)"
    ]
