--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "cum_cases_df = download_df(\"time_series_covid19_confirmed_US.csv\")\n",
     "cum_deaths_df = download_df(\"time_series_covid19_deaths_US.csv\")\n",
-    "cum_cases_df.columns[:13]"
+    "print(cum_cases_df.columns[:13])"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to convert from cumulative to difference data. However the original data is inconsistent due to later corrections of earlier errors, and is noisy due to reporting jitter. To clean up both of these artifacts, we will smooth both cumulative data sources with a square window, effectively attributing a report recoreded at date ``t`` to a true report at date ``t-n`` where ``n`` is uniformly distributed in an interval ``[0, window)``."
+    "We need to convert from cumulative to difference data. However the original data is inconsistent due to later corrections of earlier errors, and is noisy due to reporting jitter. To clean up both of these artifacts, we will smooth both cumulative data sources with a square window, effectively attributing each report recorded at date ``t`` to a true report at date ``t-n`` where ``n`` is uniformly distributed in an interval ``[0, window)``."
    ]
   },
   {
@@ -302,7 +302,7 @@
    "source": [
     "%%time\n",
     "pyro.set_rng_seed(20200607)\n",
-    "mcmc = model.fit(num_samples=1000, haar_full_mass=15)"
+    "mcmc = model.fit(num_samples=500, haar_full_mass=15, jit_compile=True)"
    ]
   },
   {
