--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -218,16 +218,16 @@
     "        return {\"S\": self.population,\n",
     "                \"E\": torch.zeros_like(self.population),\n",
     "                \"I\": torch.zeros_like(self.population),\n",
-    "                \"beta\": torch.tensor(1.)}\n",
+    "                \"R_factor\": torch.tensor(1.)}\n",
     "\n",
     "    def transition(self, params, state, t):\n",
     "        R0, tau_e, tau_i, rho, mu, drift, od = params\n",
     "\n",
     "        # Assume effective reproductive number Rt varies in time,\n",
     "        # but is the same across all regions (say due to synchronized policy).\n",
-    "        beta = pyro.sample(\"beta_{}\".format(t),\n",
-    "                           dist.LogNormal(state[\"beta\"].log(), drift))\n",
-    "        Rt = pyro.deterministic(\"Rt_{}\".format(t), R0 * beta)\n",
+    "        R_factor = pyro.sample(\"R_factor_{}\".format(t),\n",
+    "                           dist.LogNormal(state[\"R_factor\"].log(), drift))\n",
+    "        Rt = pyro.deterministic(\"Rt_{}\".format(t), R0 * R_factor)\n",
     "\n",
     "        # Account for strong intra-region infections, weak inter-region infections, and\n",
     "        # even weaker background infections from external sources. This uses approximate\n",
@@ -256,7 +256,7 @@
     "            state[\"S\"] = state[\"S\"] - S2E\n",
     "            state[\"E\"] = state[\"E\"] + S2E - E2I\n",
     "            state[\"I\"] = state[\"I\"] + E2I - I2R\n",
-    "            state[\"beta\"] = beta  # We store the latest beta value in the state dict.\n",
+    "            state[\"R_factor\"] = R_factor  # We store the latest R_factor value in the state dict.\n",
     "\n",
     "            # Condition on observations.\n",
     "            t_is_observed = isinstance(t, slice) or t < self.duration\n",
