Tune mp_context parameters

--- a/tutorial/source/epi_phylogeny.ipynb
+++ b/tutorial/source/epi_phylogeny.ipynb
@@ -35,7 +35,6 @@
     "%matplotlib inline\n",
     "pyro.enable_validation(True)\n",
     "torch.set_default_dtype(torch.double)\n",
-    "torch.multiprocessing.set_start_method(\"forkserver\")\n",
     "torch.set_printoptions(precision=2)\n",
     "print(torch.__version__)\n",
     "print(pyro.__version__)"
@@ -246,8 +245,9 @@
     "                                coal_times=coal_times)\n",
     "\n",
     "pyro.set_rng_seed(20200615)\n",
-    "mcmc = model.fit(num_samples=4, haar_full_mass=7,\n",
+    "mcmc = model.fit(warmup_steps=200, num_samples=200, full_mass=True, max_tree_depth=10,\n",
     "                 num_chains=torch.multiprocessing.cpu_count() - 1,\n",
+    "                 mp_context=\"spawn\",\n",
     "                 jit_compile=True)"
    ]
   },
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_series(model)"
+    "plot_series(model, samples)"
    ]
   },
   {
