Update notebook with .fit_svi()

--- a/tutorial/source/epi_phylogeny.ipynb
+++ b/tutorial/source/epi_phylogeny.ipynb
@@ -236,19 +236,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "model = SuperspreadingSEIRModel(population=int(39e6),\n",
     "                                incubation_time=5.5,\n",
     "                                recovery_time=14.,\n",
     "                                data=new_cases,\n",
     "                                leaf_times=leaf_times,\n",
-    "                                coal_times=coal_times)\n",
-    "\n",
-    "pyro.set_rng_seed(20200615)\n",
-    "mcmc = model.fit(warmup_steps=200, num_samples=200, full_mass=True, max_tree_depth=10,\n",
-    "                 num_chains=torch.multiprocessing.cpu_count() - 1,\n",
-    "                 mp_context=\"spawn\",\n",
-    "                 jit_compile=True)"
+    "                                coal_times=coal_times)"
    ]
   },
   {
@@ -257,7 +250,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcmc.summary()"
+    "%%time\n",
+    "losses = model.fit_svi(num_samples=200, haar=True, jit=True)\n",
+    "\n",
+    "plt.plot(losses)\n",
+    "plt.xlabel(\"SVI step\")\n",
+    "plt.ylabel(\"loss\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%debug"
    ]
   },
   {
@@ -369,11 +376,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison with MCMC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "pyro.set_rng_seed(20200615)\n",
+    "mcmc = model.fit_mcmc(warmup_steps=200, num_samples=200, full_mass=True, max_tree_depth=10,\n",
+    "                      num_chains=torch.multiprocessing.cpu_count() - 1,\n",
+    "                      mp_context=\"spawn\",\n",
+    "                      jit_compile=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc.summary()"
+   ]
   }
  ],
  "metadata": {
