Add both MCMC and SVI options

--- a/tutorial/source/epi_regional.ipynb
+++ b/tutorial/source/epi_regional.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll train the model using MCMC."
+    "Now we'll train the model using either MCMC or SVI."
    ]
   },
   {
@@ -302,16 +302,23 @@
    "source": [
     "%%time\n",
     "pyro.set_rng_seed(20200607)\n",
-    "mcmc = model.fit(num_samples=500, haar_full_mass=15, jit_compile=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcmc.summary()"
+    "\n",
+    "algo = \"mcmc\"\n",
+    "if algo == \"mcmc\":\n",
+    "    # Fit using MCMC.\n",
+    "    mcmc = model.fit_mcmc(\n",
+    "        warmup_steps=500, num_samples=1000, haar_full_mass=15,\n",
+    "         jit_compile=True)\n",
+    "    mcmc.summary()\n",
+    "else:\n",
+    "    # Fit using SVI.\n",
+    "    losses = model.fit_svi(\n",
+    "        num_samples=200, haar=True,\n",
+    "        # Workaround: jit does not work on cuda (due to a PyTorch bug?)\n",
+    "        jit=torch.tensor(0).device == torch.device('cpu'))\n",
+    "    plt.plot(losses)\n",
+    "    plt.xlabel(\"SVI step\")\n",
+    "    plt.ylabel(\"loss\")"
    ]
   },
   {
@@ -321,13 +328,15 @@
    "outputs": [],
    "source": [
     "def plot_globals(samples):\n",
-    "    names = sorted(k for k, v in model.samples.items() if v.shape[1:].numel() == 1)\n",
+    "    names = sorted(k for k, v in model.samples.items()\n",
+    "                   if v.shape[1:].numel() == 1\n",
+    "                   if v.dtype == torch.double)\n",
     "    fig, axes = plt.subplots(len(names), 1, figsize=(5, 2.5 * len(names)))\n",
     "    for ax, name in zip(axes, names):\n",
     "        mean = samples[name].mean().item()\n",
     "        std = samples[name].std().item()\n",
     "        ax.set_title(\"{} = {:0.3g} \\u00B1 {:0.3g}\".format(name, mean, std))\n",
-    "        sns.distplot(samples[name].reshape(-1), ax=ax)\n",
+    "        sns.distplot(samples[name].reshape(-1).cpu(), ax=ax)\n",
     "        ax.set_yticks(())\n",
     "    plt.tight_layout()"
    ]
@@ -358,17 +367,17 @@
    "outputs": [],
    "source": [
     "def plot_series(samples, name, title):\n",
-    "    num_samples = len(samples[name])\n",
-    "    time = torch.arange(samples[name].size(1))\n",
-    "    value = samples[name]\n",
+    "    value = samples[name].cpu().squeeze()\n",
+    "    num_samples, duration = value.shape\n",
+    "    time = torch.arange(duration).cpu()\n",
     "    median = value.median(dim=0).values\n",
     "    p05 = value.kthvalue(int(round(0.5 + 0.05 * num_samples)), dim=0).values\n",
     "    p95 = value.kthvalue(int(round(0.5 + 0.95 * num_samples)), dim=0).values\n",
     "\n",
     "    plt.figure(figsize=(8, 4))\n",
     "    plt.title(title)\n",
-    "    plt.fill_between(time, p05[:, 0], p95[:, 0], color=\"red\", alpha=0.3, label=\"90% CI\")\n",
-    "    plt.plot(time, median[:, 0], \"r-\", label=\"median\")\n",
+    "    plt.fill_between(time, p05, p95, color=\"red\", alpha=0.3, label=\"90% CI\")\n",
+    "    plt.plot(time, median, \"r-\", label=\"median\")\n",
     "    plt.axvline(model.duration - 0.5, color=\"gray\", lw=1)\n",
     "    plt.axhline(1, color=\"gray\", lw=1, linestyle=\"--\")\n",
     "    plt.xlim(0, len(time) - 1)\n",
@@ -396,10 +405,9 @@
    "outputs": [],
    "source": [
     "def plot_regional_series(samples, name, title):\n",
-    "    num_samples = len(samples[name])\n",
-    "    num_regions = len(model.population)\n",
-    "    time = torch.arange(samples[name].size(1))\n",
-    "    value = samples[name]\n",
+    "    value = samples[name].cpu()\n",
+    "    num_samples, duration, num_regions = value.shape\n",
+    "    time = torch.arange(duration).cpu()\n",
     "    median = value.median(dim=0).values\n",
     "    p05 = value.kthvalue(int(round(0.5 + 0.05 * num_samples)), dim=0).values\n",
     "    p95 = value.kthvalue(int(round(0.5 + 0.95 * num_samples)), dim=0).values\n",
