Section on multivariate distributions

--- a/tutorial/source/normalizing_flows_i.ipynb
+++ b/tutorial/source/normalizing_flows_i.ipynb
@@ -402,7 +402,21 @@
    "metadata": {},
    "source": [
     "## Multivariate Distributions\n",
-    "### Background\n"
+    "### Background\n",
+    "The fundamental idea of normalizing flows also applies to multivariate random variables, and this is where its value is clearly seen - *representing complex high-dimensional distributions*. In this case, a simple multivariate source of noise, for example a standard i.i.d. normal distribution, $X\\sim\\mathcal{N}(\\mathbf{0},I_{D\\times D})$, is passed through a vector-valued bijection, $g:\\mathbb{R}^D\\rightarrow\\mathbb{R}^D$, to produce the more complex transformed variable $Y=g(X)$.\n",
+    "\n",
+    "Sampling $Y$ is again trivial and involves evaluation of the forward pass of $g$. We can score $Y$ using the multivariate substitution rule of integral calculus,\n",
+    "\\begin{align}\n",
+    "    \\mathbb{E}_{p_X(\\cdot)}\\left[f(X)\\right] &= \\int_{\\text{supp}(X)}f(\\mathbf{x})p_X(\\mathbf{x})d\\mathbf{x}\\\\\n",
+    "    &= \\int_{\\text{supp}(Y)}f(g^{-1}(\\mathbf{y}))p_X(g^{-1}(\\mathbf{y}))\\left|\\frac{d\\mathbf{x}}{d\\mathbf{y}}\\right|d\\mathbf{y}\\\\\n",
+    "    &= \\mathbb{E}_{p_Y(\\cdot)}\\left[f(g^{-1}(Y))\\right],\n",
+    "\\end{align}\n",
+    "where $d\\mathbf{x}/d\\mathbf{y}$ denotes the Jacobian matrix of $g^{-1}(\\mathbf{y})$. Equating the last two lines we get,\n",
+    "\\begin{align}\n",
+    "    \\ln(p_Y(y)) &= \\ln(p_X(g^{-1}(y)))+\\ln\\left(\\left|\\frac{d\\mathbf{x}}{d\\mathbf{y}}\\right|\\right)\\\\\n",
+    "    &= \\ln(p_X(g^{-1}(y)))-\\ln\\left(\\left|\\frac{d\\mathbf{y}}{d\\mathbf{x}}\\right|\\right).\n",
+    "\\end{align}\n",
+    "Inituitively, this equation says that the density of $Y$ is equal to the density at the corresponding point in $X$ plus a term that corrects for the warp in volume around an infinitesimally small volume around $Y$ caused by the transformation. For instance, in 2 (3) dimensions, the geometric interpretation of the absolute value of the determinant of a Jacobian is that it represents the area (volume) of a cuboid (parallelepiped) with edges defined by the columns of the Jacobian (see *Calculus reference*)."
    ]
   },
   {
