Add smoke_test logic

--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -310,7 +310,8 @@
    ],
    "source": [
     "%%time\n",
-    "losses = model.fit_svi(jit=True)"
+    "losses = model.fit_svi(num_steps=101 if smoke_test else 2001,\n",
+    "                       jit=True)"
    ]
   },
   {
@@ -582,7 +583,8 @@
    "source": [
     "%%time\n",
     "model = SimpleSIRModel(population, recovery_time, obs)\n",
-    "mcmc = model.fit_mcmc(num_samples=400, haar_full_mass=10, jit_compile=True)"
+    "mcmc = model.fit_mcmc(num_samples=4 if smoke_test else 400,\n",
+    "                      haar_full_mass=10, jit_compile=True)"
    ]
   },
   {
