Update docs to point to new tutorials

--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -31,10 +31,10 @@
     "\n",
     "- [Scope](#Scope)\n",
     "- [Modeling](#Modeling)\n",
-    "  - [Generating data](#Generating-data)\n",
+    "- [Generating data](#Generating-data)\n",
     "- [Inference](#Inference)\n",
     "- [Prediction](#Prediction)\n",
-    "  - [Forecasting](#Forecasting)"
+    "- [Forecasting](#Forecasting)"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "## Scope\n",
     "\n",
-    "The [pyro.contrib.epidemiology](http://docs.pyro.ai/en/latest/contrib.epidemiology.html) module provides a modeling language for a class of discrete-valued discrete-time stochastic epidemiological compartmental models, together with a number of black box inference algorithms to perform joint inference on global parameters and latent variables. This modeling language is more restrictive than the full Pyro probabilistic programming language:\n",
+    "The [pyro.contrib.epidemiology](http://docs.pyro.ai/en/latest/contrib.epidemiology.html) module provides a modeling language for a class of stochastic discrete-time discrete-count compartmental models, together with a number of black box inference algorithms to perform joint inference on global parameters and latent variables. This modeling language is more restrictive than the full Pyro probabilistic programming language:\n",
     "\n",
     "- control flow must be static;\n",
     "- compartmental distributions are restricted to [binomial_dist()](http://docs.pyro.ai/en/latest/contrib.epidemiology.html#pyro.contrib.epidemiology.distributions.binomial_dist), [beta_binomial_dist()](http://docs.pyro.ai/en/latest/contrib.epidemiology.html#pyro.contrib.epidemiology.distributions.beta_binomial_dist), and [infection_dist()](http://docs.pyro.ai/en/latest/contrib.epidemiology.html#pyro.contrib.epidemiology.distributions.infection_dist);\n",
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generating data <a class=\"anchor\" id=\"Generating-data\"></a>\n",
+    "## Generating data <a class=\"anchor\" id=\"Generating-data\"></a>\n",
     "\n",
     "To check that our model generates plausible data, we can create a model with empty data and call the model's [.generate()](http://docs.pyro.ai/en/latest/contrib.epidemiology.html#pyro.contrib.epidemiology.compartmental.CompartmentalModel.generate) method. This method first calls, `.global_model()`, then calls `.initialize()`, then calls `.transition()` once per time step (based on the length of our empty data."
    ]
@@ -310,7 +310,7 @@
    ],
    "source": [
     "%%time\n",
-    "losses = model.fit_svi(num_steps=101 if smoke_test else 2001,\n",
+    "losses = model.fit_svi(num_steps=101ss if smoke_test else 2001,\n",
     "                       jit=True)"
    ]
   },
