--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -310,7 +310,7 @@
    ],
    "source": [
     "%%time\n",
-    "losses = model.fit_svi(num_steps=101ss if smoke_test else 2001,\n",
+    "losses = model.fit_svi(num_steps=101 if smoke_test else 2001,\n",
     "                       jit=True)"
    ]
   },
