--- a/tutorial/source/epi_intro.ipynb
+++ b/tutorial/source/epi_intro.ipynb
@@ -628,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced modeling <a class=\"anchor\" id=\"Advanced modeling\"></a>\n",
+    "## Advanced modeling <a class=\"anchor\" id=\"Advanced-modeling\"></a>\n",
     "\n",
     "So far we've seen how to create a simple univariate model, fit the model to data, and predict and forecast future data. Next let's consider more advanced modeling techniques:\n",
     "\n",
